# e-cam

./: .gitignore  Dockerfile  README.md  app.config.ts  codegen.ts  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  flake.nix  package-lock.json  package.json  pyproject.toml  requirements.txt  symapi.Dockerfile  tailwind.config.js  turbo.json  vitest.config.ts  web.Dockerfile
.github/workflows/: js-tests.yaml  lint.yaml  pytest.yaml  tests.yaml
content/: assignment.yaml  data.yaml  fgs.yaml  physics.ts  project.md  ucl.md
content/AW4C/: index.md
content/AW4L/: index.md  orpc.md  query.md
content/AW4L_old/: index.md
content/IC1T/: index.md
content/LW3L/: index.md
content/PM1C/: diagnostic-test-groupe2.yaml  diagnostic-test.yaml  exam.md  gauss.md  index.md  past-papers.md  skills.md
content/SA4T/: index.md
content/web_arch/: 01-reactivity.md
prisma/: schema.prisma
public/: scalar.html
src/: app.tsx  entry-server.tsx  middleware.ts  style.css  ws.ts
src/components/: Answer.tsx  Assignment.tsx  AssignmentTable.tsx  Breadcrumbs.tsx  Button.tsx  Calculator.tsx  Card.tsx  ChapterInfo.tsx  Code.tsx  Conversation.tsx  Dot.tsx  Environment.tsx  EquationSteps.tsx  ErrorBoundary.tsx  Excel.tsx  Exercise.tsx  ExerciseBase.test.tsx  ExerciseBase.tsx  ExerciseSequence.server.tsx  ExerciseSequence.tsx  Fa.tsx  FullScreen.tsx  Gauss.tsx  Geogebra.tsx  Graph.tsx  Html.tsx  Iframe.tsx  Javascript.tsx  LatexEditor.tsx  LineChart.tsx  LinkedPlot.tsx  Markdown.tsx  Math.test.tsx  Math.tsx  Mermaid.tsx  MetaProvider.tsx  Navbar.tsx  Page.tsx  Pagination.tsx  Plot.tsx  (+18 more)
src/exercises/: CompleteSquare.test.tsx  CompleteSquare.tsx  ComplexPolar.test.tsx  ComplexPolar.tsx  ConicSection.test.tsx  ConicSection.tsx  CrossProduct.tsx  Differentiate.test.tsx  Differentiate.tsx  Equation.test.tsx  Equation.tsx  Factor.test.tsx  Factor.tsx  Limit.test.tsx  Limit.tsx  MultipleChoice.tsx  Pythagoras.tsx  Python.tsx  Simple.test.tsx  Simple.tsx  System.test.tsx  System.tsx  Tangent.tsx  TrigonometricValues.tsx  VectorAngle.tsx
src/lib/: assignments.ts  board.ts  course.ts  cryptography.ts  (+11 more)
symapi/: __init__.py  chemistry.py  conic_section.py  core.py  expression.py  package.json  pyproject.toml  quantity.py  system.py  test_expression.py  test_quantity.py  vector.py
web/: .prettierrc  codegen.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+340 files in other folders)
