[tool.poetry]
name = "e-cam"
version = "0.1.0"
description = ""
authors = ["Khoi Nguyen <khoi@nguyen.me.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.13.3"
strawberry-graphql = {extras = ["fastapi"], version = "^0.235.1"}
panflute = "^2.3.1"
black = "^24.4.2"
lark-parser = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
